# batsoc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: pr.yaml  release.yaml  test-release.yaml
src/: socbat.py
src/batsoc/: __init__.py  batsoc.py
src/batsoc/curves/: BatteryType.CR2032.csv  BatteryType.LI_ION.csv  BatteryType.NICD.csv
src/batsoc/tests/: test_batsoc.py
src/curves/: BatteryType.ALKALINE.csv
