[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools-git-versioning<2"
]
build-backend = "setuptools.build_meta"

[project]
name = "socbat"
authors = [
    {name = "Matti Eiden", email = "snaipperi@gmail.com"},
]
description = "Library for estimating state of charge from battery cell voltage"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["data", "mapping"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["version"]
[tool.setuptools-git-versioning]
enabled = true